--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,5 +79,5 @@ publish_build_to_pre_qa:
   after_script:
     - cp publish_build_to_pre_qa.log artifacts/publish_build_to_pre_qa.log
   rules:
-    - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]$/
+    - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]$/'
       when: always
