--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,6 @@ publish_build_to_pre_qa:
     - python security_content_automation/publish_build_to_pre_qa/publish_build_to_pre_qa.py --version $CI_COMMIT_REF_NAME --builds DA-ESS_AmazonWebServices_Content DA-ESS-ContentUpdate
   after_script:
     - cp publish_build_to_pre_qa.log artifacts/publish_build_to_pre_qa.log
-  only:
-    refs:
-      - tags
+  rules:
+    - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]$/'
+      when: always
