--- a/.github/workflows/build-and-validate.yml
+++ b/.github/workflows/build-and-validate.yml
@@ -469,6 +469,11 @@ jobs:
           source venv/bin/activate 
           python3 bin/doc_gen.py --path . --output docs -v
       
+      - name: Enrich detection list to add TA-list in detection file
+        run: |
+          source venv/bin/activate
+          python3 security_content_automation/enrich_detections.py
+          
       - name: Make YAMLs Pretty 
         run: |
           source venv/bin/activate
