--- a/.github/workflows/build-and-validate.yml
+++ b/.github/workflows/build-and-validate.yml
@@ -480,6 +480,7 @@ jobs:
           source venv/bin/activate
           python3 bin/doc_gen.py --path . --output docs -v
 
+      -name : 
       - name: Make YAMLs Pretty
         run: |
           source venv/bin/activate
