--- a/detections/cloud/abnormally_high_number_of_cloud_infrastructure_api_calls.yml
+++ b/detections/cloud/abnormally_high_number_of_cloud_infrastructure_api_calls.yml
@@ -66,3 +66,17 @@ tags:
   - All_Changes.status
   risk_score: 15
   security_domain: network
+  required_tas:
+  - Splunk_TA_citrix-netscaler
+  - Splunk_TA_nix
+  - Splunk_TA_aws-kinesis-firehose
+  - Splunk_TA_ossec
+  - Splunk_TA_juniper
+  - splunk_ta_o365
+  - Splunk_TA_google-cloudplatform
+  - Splunk_TA_cyberark
+  - Splunk_TA_box
+  - Splunk_TA_cisco-asa
+  - Splunk_TA_infoblox
+  - Splunk_TA_salesforce
+  - Splunk_TA_cyberark_epm
