--- a/.github/workflows/build-and-validate.yml
+++ b/.github/workflows/build-and-validate.yml
@@ -481,9 +481,11 @@ jobs:
           python3 bin/doc_gen.py --path . --output docs -v
 
       - name: Enrich detection list to add TA-list in detection file
-	run: |
-	  source venv/bin/activate
-	  python3 security_content_automation/enrich_detections.py
+        env: 
+          GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+        run: |
+          source venv/bin/activate
+          python3 security_content_automation/enrich_detections.py
       
       - name: Make YAMLs Pretty 
         run: |
