--- a/detections/endpoint/overwriting_accessibility_binaries.yml
+++ b/detections/endpoint/overwriting_accessibility_binaries.yml
@@ -69,3 +69,7 @@ tags:
   - Filesystem.dest
   risk_score: 72
   security_domain: endpoint
+  required_tas:
+  - Splunk_TA_nix
+  - Splunk_TA_ossec
+  - splunk_ta_o365
